Do not try to support a subset of primitive wrapper anymore. Support all of them (except Char for now), because we are still finding code using various primitive type wrapper in various corners.
git-svn-id: https://svn.apache.org/repos/asf/sis/branches/JDK7@1508118 13f79535-47bb-0310-9956-ffa450edef68